Fixed broken images and aligned images

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ div {
 .content {
     padding: 0 0.938rem;
     margin: 0 auto;
-    min-width: 37.5rem;
+    width: 41.5rem;
 }
 :focus {
     outline: none;
@@ -96,9 +96,12 @@ font-weight: 300;
 .cases .devices{
   width: 33.3333333%;
   display: inline-block;
-  border: 1px solid black;
   box-sizing: border-box;
-  height: 4em;
+}
+
+.cases .devices li {
+  display: inline-block;
+  border: 1px solid black;
 }
 .introduction h1 {
     margin-top: 17.5rem;
@@ -124,8 +127,17 @@ font-weight: 300;
     font-size: 1.125rem;
     line-height: 1.2;
 }
-
-
+.image {
+width: 90px;
+}
+ul{
+  list-style: none;
+  text-align: center;
+  padding-left: 0;
+}
+ul li {
+  display: inline-block;
+}
 
   button {
     text-shadow: none;
@@ -138,5 +150,71 @@ font-weight: 300;
   }
 button:hover {
   background-color: #F6bb42;
+}
 
+.social {
+    background-color: #fff;
+    overflow: auto;
+    padding-bottom: 9.375rem;
+    text-align: center;
+  }
+
+  .social hr {
+    border: 0;
+    border-top: 1px solid #eaebec;
+    margin: 1.313rem 0;
+}
+
+.social {
+    background-color: #fff;
+    overflow: auto;
+    padding-bottom: 9.375rem;
+    text-align: center;
+  }
+
+  .social hr {
+    border: 0;
+    border-top: 1px solid #eaebec;
+    margin: 1.313rem 0;
+}
+
+.social .icons > li {
+    border-radius: 1.25rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    display: inline-block;
+    margin: 1.25rem 5px;
+    border: 1px solid #eaebec;
+    padding: 0.625rem 0;
+    text-align: center;
+}
+
+.social .icons > li {
+    border-radius: 1.25rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    display: inline-block;
+    margin: 1.25rem 5px;
+    border: 1px solid #eaebec;
+    padding: 0.625rem 0;
+    text-align: center;
+}
+
+.social .icons > li:hover {
+    cursor: pointer;
+}
+.social .twitter {
+    color: #55acee;
+}
+.social .facebook {
+    color: #4c66a4;
+}
+.social .instagram {
+    color: #3f729b;
+}
+
+.social .copy {
+    font-size: 0.9rem;
+    font-weight: 300;
+    color: #838994;
 }
